<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ingjin="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/more_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        ingjin:theme="@style/ActionBar">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/more_backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/back_button" />
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more_content"
            android:textSize="18sp"
            android:textColor="@color/wwwwhite"/>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jjk_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"

        android:textAlignment="center"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="9dp"
        android:stretchColumns="1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/address"
                />
            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:id="@+id/more_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/pnu"
                />
            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:id="@+id/more_pnu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/ji_mok"
                />
            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:id="@+id/ji_mok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/ji_ga"
                />
            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:id="@+id/ji_ga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/area"
                />
            <TextView
                android:background="@drawable/tableborder"
                android:layout_margin="1dp"
                android:id="@+id/area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

    </TableLayout>


</androidx.appcompat.widget.LinearLayoutCompat>