<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".Fragment.FragmentContent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/content"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/address"
                />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:text="@string/pnu"
                />
            <TextView
                android:id="@+id/pnu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/capture_onOff"
                />
            <Switch
                android:id="@+id/capture_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capture_off"
                android:textColor="@color/capture_off_color"
                android:switchPadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/send_onOff"
                />
            <Switch
                android:id="@+id/send_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_off"
                android:textColor="@color/capture_off_color"
                android:switchPadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="left"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/dron_onOff"
                />
            <Switch
                android:id="@+id/dron_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dron_off"
                android:textColor="@color/capture_off_color"
                android:switchPadding="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_gravity="left"/>
        </TableRow>
    </TableLayout>
    <Button
        android:id="@+id/Btn_moreProperty"
        android:text="속성 더보기"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/Tv_picText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="사진정보"
        android:textAlignment="center"
        android:textSize="20sp" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#aaaaaa"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/take_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:padding="15dp"
                android:background="@drawable/add_a_photo_black" />

            <ImageButton
                android:id="@+id/take_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:padding="15dp"
                android:background="@drawable/add_a_image_black" />

        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layerType="none"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="사진 보내기"
        />
    <ListView
        android:id="@+id/image_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />


</LinearLayout>